--- a/src/Components/Post/post.scss
+++ b/src/Components/Post/post.scss
@@ -54,6 +54,7 @@
         // text-align: left;
         margin: 0px;
         text-align: justify;
+        font-family: Segoe UI Historic, Segoe UI, Helvetica, Arial, sans-serif;
       }
     }
     .sec2post {
